Actually working 1.21.6/7 support (whew!)